@@ -1,3 +1,9 @@
+Thu Nov 24 18:25:58 2005  Tim Janik  <timj@imendio.com>
+
+	* gtk/gtkmenushell.h (struct _GtkMenuShellClass): moved ::close signal
+	vmethod handler to structure end and removed a reseved function pointer.
+	this restore binary compatibility with GtkMenuShell from gtk+-2.6.10.
+
 Thu Nov 24 18:06:08 2005  Tim Janik  <timj@imendio.com>
 
 	* gtk/gtkcalendar.h: removed ::erroneous_date and ::selected_date 
